--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 </head>
 
 <body>
-    <header>
+
+    <!-- Navigation & Logo -->
+    <header class="font-one">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <nav>
+        <nav class="font-two">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -24,56 +26,64 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Hero Image -->
     <figure class="hero">
         <img src="./assets/images/digital-marketing-meeting.jpg" alt="four people around a table at an office meeting">
     </figure>
-    <main class="content">
-        <section id="search-engine-optimization" class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+
+    <!-- Main Content -->
+    <main class="content font-two">
+        <section id="search-engine-optimization" class="content-bit">
+            <img src="./assets/images/search-engine-optimization.jpg" alt="office desk with items seen from the top" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        <section id="online-reputation-management" class="content-bit">
+            <img src="./assets/images/online-reputation-management.jpg" alt="man holding a smartphone while using a laptop" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
-        <section id="social-media-marketing" class="social-media-marketing">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        <section id="social-media-marketing" class="content-bit">
+            <img src="./assets/images/social-media-marketing.jpg" alt="business meeting around a table covered with emoticons seen from the top" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </section>
     </main>
-    <aside class="benefits">
-        <section class="benefit-lead">
+
+    <!-- Benefit side section -->
+    <aside class="benefits font-two">
+        <section class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="cog icon"/>
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
-        <section class="benefit-brand">
+        <section class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb headed man icon"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
-        <section class="benefit-cost">
+        <section class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="cog and dollar coins icon"/>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </section>
     </aside>
-    <footer>
+
+    <!-- Footer -->
+    <footer class="font-one">
         <h3>Made with ❤️️ by Horiseon</h3>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
