add description and keywords meta tags in html file head

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="seo, search engine optimization, marketing, social media, reputation, management, digital">
+    <meta name="description" content="website of a company that offers search engine optimization, reputation management and social media marketing to businesses">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
