--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="en-gb">
 
 <head>
+
+    <!-- Meta Tags -->
     <meta charset="UTF-8" />
     <meta name="keywords" content="seo, search engine optimization, marketing, social media, reputation, management, digital">
     <meta name="description" content="website of a company that offers search engine optimization, reputation management and social media marketing to businesses">
+
+    <!-- CSS File Link -->
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <!-- Title -->
     <title>Horiseon</title>
+
 </head>
 
 <body>
@@ -91,6 +98,7 @@
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
     </footer>
+    
 </body>
 
 </html>
